# Framework

./: CMakeLists.txt  LICENSE
.github/workflows/: build.yml
cmake/: frameworkConfig.cmake
include/framework/: version.hpp
include/framework/encoding/: base64.hpp  base64url.hpp
tests/: encoding_base64.cc  encoding_base64url.cc  framework.cc
